--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "compile": "yarn hardhat compile",
     "clean": "yarn hardhat clean",
     "deploy": "yarn hardhat run --network godwoken-testnet scripts/Vault.ts",
-    "deploy:ropsten": "yarn hardhat run --network ropsten scripts/Vault.ts"
+    "deploy:ropsten": "yarn hardhat run --network ropsten scripts/Vault.ts",
+    "deploy:gw-dev": "yarn hardhat run --network godwoken-devnet scripts/Vault.ts"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
